# ideas

cython-fun/: Makefile  Untitled.ipynb  hello.c  hello.pyx  setup.py
data/fortnite/: tmp_FNCS Semi - ASIA.csv  tmp_FNCS Semi - BR.csv  tmp_FNCS Semi - EU.csv  tmp_FNCS Semi - ME.csv  tmp_FNCS Semi - NAE.csv  tmp_FNCS Semi - NAW.csv  tmp_FNCS Semi - OCE.csv
data/nbastats/: abbreviations.csv  east-conf.csv  player-contracts.csv  west-conf.csv
fortnite/: Trying Stuff.ipynb  scrape.py  search.py  teams.csv  teams.json
nbastats/: pyproject.toml
nbastats/notebooks/: Exploration.ipynb
nbastats/tests/: test_nbastats.py
notebooks/chess/: first_attempt.ipynb
notebooks/fortnite/: analysis.ipynb  fncs.ipynb  loader.py  prerun.py
notebooks/nbastats/: Sample API Query.ipynb
