[tool.poetry]
name = "nbastats"
version = "0.1.0"
description = ""
authors = ["Nick Anthony <nanthony007@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.25.1"
jupyter = "^1.0.0"
pandas = "^1.2.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mkdocs = "^1.1.2"
isort = "^5.7.0"
flake8 = "^3.8.4"
pytest-cov = "^2.11.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
